[tool.poetry]
name = "deepseek-coder"
version = "0.1.0-alpha"
description = "Deepseek Coder running locally in the terminal."
authors = ["Marcos Cannabrava <mpcannabrava@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: MacOS X",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.5",
    "Topic :: Terminals"
]

[tool.poetry.dependencies]
python = "^3.12"
vllm = "0.6.6.post1"
aider-install = "0.1.2"
click = "^8.1.8"

[tool.poetry.urls]
Homepage = "https://github.com/marcoscannabrava/deepseek-coder"
Issues = "https://github.com/marcoscannabrava/deepseek-coder/issues"

[tool.poetry.scripts]
deepseek-coder = "deepseek_coder.deepseek_coder:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
